# flyshion

./: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Message.sh  README  aclocal.m4  capture.sh  config-ofetion.h.cmake  config.h.in  configure  configure.ac  gentar.sh  tarballfunc.sh
adium-ofetion/: AIFetionPlugin.h  AIFetionPlugin.m  AdiumFetionPlugin_Prefix.pch  ESFetionService.h  ESFetionService.m  ESPurpleFetionAccount.h  ESPurpleFetionAccount.m  ESPurpleFetionAccountViewController.h  ESPurpleFetionAccountViewController.m  Info.plist
cliofetion/: CMakeLists.txt  INSTALL  INSTALL.standalone  Makefile  README  cliofetion.1
cmake-modules/: FindGDKPixBuf.cmake  FindGLIB2.cmake  FindGStreamer.cmake  FindLibnotify.cmake  FindNetworkManager.cmake  FindSqlite.cmake
include/: Makefile.am  Makefile.in  fx_about.h  fx_add_group.h  fx_addbuddy.h  fx_app.h  fx_bottom.h  fx_chat.h  fx_close.h  fx_code.h  fx_conn.h  fx_edit.h  fx_head.h  fx_history.h  fx_idle.h  fx_include.h  fx_login.h  fx_lookup.h  fx_lookupres.h  fx_main.h  fx_many.h  fx_myself.h  fx_server.h  fx_set.h  fx_smsstat.h  fx_sound.h  fx_sysmsg.h  fx_types.h
libofetion/: CMakeLists.txt  ChangeLog  Makefile  README  fetion_buddylist.c  fetion_config.c  fetion_connection.c  fetion_connection.h  fetion_contact.c  fetion_contact.h  fetion_conversation.c  fetion_group.c  fetion_history.c  fetion_log.c  fetion_log.h  fetion_login.c  fetion_login.h  fetion_robot.c  fetion_robot.h  fetion_sip.c  fetion_types.h  fetion_user.c  fetion_user.h  libofetion.map  ofetion.pc.cmake  openfetion.h
openfetion/: ABOUT-NLS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.standalone  README  config-ofetion.h.cmake  openfetion.1
openfetion/po/: openfetion.pot  zh_CN.po
openfetion/src/: fx_about.c  fx_about.h  fx_add_group.h  fx_addbuddy.c  fx_app.h  fx_bottom.c  fx_chat.c  fx_chat.h  fx_cli.c  fx_code.c  fx_conn.c  fx_conn.h  fx_dsms.c  fx_dsms.h  fx_edit.c  fx_emotion.c  fx_emotion.h  fx_gedit.c  fx_gedit.h  fx_head.c  fx_head.h  fx_history.c  fx_idle.h  fx_login.c  fx_lookupres.c  fx_lookupres.h  fx_main.c  fx_main.h  fx_myself.c  fx_pggroup.c  fx_pggroup.h  fx_pgprofile.h  fx_profile.c  fx_profile.h  fx_proxy.c  fx_proxy.h  fx_search.c  fx_search.h  fx_server.c  fx_server.h  (+11 more)
pidgin-ofetion/: CMakeLists.txt  fetion.h  fx_blist.c  fx_buddy.c  fx_chat.c  fx_chat.h  fx_code.c  fx_code.h  fx_login.c  fx_sip.c  fx_sip.h  fx_types.h  fx_user.c  fx_util.c  openfetion.c
pidgin-ofetion/po/: pidgin-ofetion.pot  zh_CN.po
robot/: CMakeLists.txt  ChangeLog  INSTALL.standalone  Makefile  robot.c  robot.sh
robot/modules/: bistu_robot.c
robot/src/: bistu_robot.c  command_robot.c  test.c
src/: Makefile.am  Makefile.in  fx_about.c  fx_add_group.c  fx_app.c  fx_bottom.c  fx_chat.c  fx_cli.c  fx_close.c  fx_code.c  fx_conn.c  fx_edit.c  fx_gedit.c  fx_head.c  fx_history.c  fx_idle.c  fx_login.c  fx_lookup.c  fx_lookupres.c  fx_main.c  fx_many.c  fx_myself.c  fx_pggroup.c  fx_pgprofile.c  fx_profile.c  fx_server.c  fx_set.c  fx_share.c  fx_sound.c  fx_tree.c  fx_util.c
trunk/: ChangeLog  INSTALL  LICENSE.OpenSSL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  count.sh  svn.sh
trunk/autom4te.cache/: output.0  requests  traces.0  traces.1
trunk/include/: Makefile  Makefile.am  Makefile.in  fx_about.h  fx_add_group.h  fx_addbuddy.h  fx_bottom.h  fx_chat.h  fx_close.h  fx_code.h  fx_conn.h  fx_dsms.h  fx_edit.h  fx_emotion.h  fx_gedit.h  fx_head.h  fx_history.h  fx_include.h  fx_login.h  fx_lookup.h  fx_lookupres.h  fx_main.h  fx_many.h  fx_myself.h  fx_pggroup.h  fx_pgprofile.h  fx_profile.h  fx_proxy.h  fx_search.h  fx_set.h  fx_share.h  fx_sysmsg.h  fx_tree.h  fx_types.h  fx_util.h
trunk/include/openfetion/: Makefile  Makefile.am  Makefile.in  fetion_config.h  fetion_connection.h  fetion_contact.h  fetion_conversation.h  fetion_directsms.h  fetion_history.h  fetion_include.h  fetion_list.h  fetion_login.h  fetion_message.h  fetion_share.h  fetion_sip.h  fetion_types.h  fetion_user.h  openfetion.h
trunk/lib/: Makefile.am  Makefile.in  fetion_buddylist.c  fetion_config.c  fetion_connection.c  fetion_contact.c  fetion_conversation.c  fetion_directsms.c  fetion_group.c  fetion_history.c  fetion_login.c  fetion_message.c  fetion_share.c  fetion_sip.c  fetion_user.c  ofetion.pc.in
trunk/m4/: ChangeLog
trunk/po/: ChangeLog  POTFILES.in  zh_CN.po
trunk/resource/: Makefile  Makefile.am  Makefile.in  license.txt  openfetion.desktop  style.rc
trunk/skin/: Makefile  Makefile.am  Makefile.in
trunk/skin/face_images/: Makefile  Makefile.am  Makefile.in
trunk/src/: Makefile  Makefile.am  Makefile.in  fetion_buddylist.c  fetion_config.c  fetion_connection.c  fetion_contact.c  fetion_conversation.c  fetion_debug.c  fetion_directsms.c  fetion_history.c  fetion_list.c  fetion_login.c  fetion_message.c  fetion_share.c  fetion_sip.c  fetion_user.c  fx_about.c  fx_add_group.c  fx_addbuddy.c  fx_app.c  fx_bottom.c  fx_chat.c  fx_close.c  fx_code.c  fx_conn.c  fx_dsms.c  fx_edit.c  fx_emotion.c  fx_gedit.c  fx_head.c  fx_history.c  fx_idle.c  fx_login.c  fx_lookup.c  fx_lookupres.c  fx_main.c  fx_many.c  fx_myself.c  fx_pggroup.c  (+12 more)
trunk/src/.deps/: openfetion-fetion_buddylist.Po  openfetion-fetion_config.Po  openfetion-fetion_connection.Po  openfetion-fetion_contact.Po  openfetion-fetion_conversation.Po  openfetion-fetion_debug.Po  openfetion-fetion_history.Po  openfetion-fetion_list.Po  openfetion-fetion_login.Po  openfetion-fetion_message.Po  openfetion-fetion_sip.Po  openfetion-fetion_user.Po  openfetion-fx_add_group.Po  openfetion-fx_addbuddy.Po  openfetion-fx_app.Po  openfetion-fx_bottom.Po  openfetion-fx_chat.Po  openfetion-fx_code.Po  openfetion-fx_edit.Po  openfetion-fx_gedit.Po  openfetion-fx_head.Po  openfetion-fx_history.Po  openfetion-fx_login.Po  openfetion-fx_lookup.Po  openfetion-fx_lookupres.Po  openfetion-fx_main.Po  openfetion-fx_many.Po  openfetion-fx_myself.Po  openfetion-fx_profile.Po  openfetion-fx_set.Po  openfetion-fx_tree.Po  openfetion-fx_util.Po
(+45 files in other folders)
