SUBDIRS = lib src include skin resource po 

EXTRA_DIST = config.rpath  m4/ChangeLog  LICENSE LICENSE.OpenSSL 

install: install-recursive
	@echo "----------------------------------------------------------";
	@echo "|                                                        |";
	@echo "|       OpenFetion 1.9 by lwp(levin108@gmail.com)        |";
	@echo "|                                                        |";
	@echo "|  OpenFetion a fetion client for linux based on GTK+2.0,|";
	@echo "|  using Fetion Protocol Version 4. It supports most     |";
	@echo "|  useful functions of Mobile Fetion,more important.     |";
	@echo "|  It\`s small and fast,and is better in look.            |";
	@echo "|  More information at http://basiccoder.com/openfetion  |";
	@echo "----------------------------------------------------------";

ACLOCAL_AMFLAGS = -I m4
